syntax = "proto3";
option java_package = "sqlproxy.proto";

import "common.proto";

message SQLRequest {
    Statement stmt = 1;
    string sql = 2;
}

message StmtRequest {
    Statement stmt = 1;
}

message Request {
    enum Event {
        UNKNOWN = 0;
        CONNECT = 1;
        CLOSE = 2;
        CREATE_STMT = 3;
        SQL_UPDATE = 4;
        SQL_QUERY = 5;
        STMT_CLOSE = 6;
    }

    Meta meta = 1;
    Event event = 2;

    oneof query {
        SQLRequest sqlRequest = 3;
    }
}
